Fixing app height and content collapse

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
 .app {
   background-color: #f5f5f5;
   width: 600px;
+  height: 1100px;
   padding-bottom: 53px;
 }
 
@@ -121,6 +122,9 @@ header .subtitle {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  position: absolute;
+  bottom: -228px;
 }
 
 .order-sum {
@@ -154,10 +158,6 @@ header .subtitle {
   font-size: 12px;
   line-height: 24px;
   color: #bbbbbb;
-}
-
-.food-price {
-  margin-left: auto;
 }
 
 .rule {
@@ -280,4 +280,8 @@ input[type='text'] {
 
 .hidden {
   display: none;
+}
+
+.marle-auto {
+  margin-left: auto;
 }
